src/test/contracts/negative/michelson_converter_no_annotation.mligo
type t4 = { one: int ; two : nat ; three : string ; four : bool}
let v4 = { one = 2 ; two = 3n ; three = "q" ; four = true }

let l4 = Layout.convert_to_left_comb v4